# misclassified-inspect

./: .gitignore  README.md  pyproject.toml  requirements.txt
example/: dataset.csv  jupyter_nb_example.ipynb
misinspect/analysis/: binary.py  classification_utils.py  evaluation_metrics.py
misinspect/datasets/: payment_transaction.py
misinspect/gui/: jupyter.py
misinspect/visualization/: payment_history_plot.py
tests/: payment_history_plot.py  test_binary.py  test_classification_utils.py  test_evaluation_metrics.py  test_jupyter.py  test_payment_transaction.py
